feat: update site

--- a/App1/src/App.css
+++ b/App1/src/App.css
@@ -1,7 +1,9 @@
 body {
+    display: flex;
+    justify-content: center;
     align-items: center;
     margin: 0;
-    display: flex;
+    padding: 0;
     background-image: url('./assets/back.gif');
     background-repeat: no-repeat;
     background-size: cover;
